# analyzite

./: .gitignore  README.md  app.py  main.py  pyproject.toml
.streamlit/: config.toml
assets/css/: main.css
src/: config.py  db.py  models.py
src/ai/prompts/: analysis_agent_prompt.md
src/analysis/: charting.py  executor.py  plan_models.py  repository.py  validator.py
src/pages/: __init__.py  analysis_plan.py  dashboard.py  home.py  import_data.py  schema_viewer.py  studies.py
src/parsers/: base.py  lyssna.py  testers.py
src/services/: file_loader.py  header_etl.py  json_exporter.py
src/ui/: charts.py  components.py  layout.py  tables.py  theme.py
src/utils/: text.py
